syntax = "proto3";

package hipstershop.v1;

import "proto/demo_base.proto";

option go_package = "protobuf;v1";


// ---------------Shipping Service----------


service ShippingService {
  rpc GetQuote(GetQuoteRequest)returns (GetQuoteResponse);
  rpc ShipOrder(ShipOrderRequest)returns (ShipOrderResponse);
}

message GetQuoteRequest {
  Address address = 1;
  repeated  CartItem items = 2;
}

message GetQuoteResponse {
  v1.Money cost_usd = 1;
}

message ShipOrderRequest {
  Address address = 1;
  repeated CartItem items = 2;
}

message ShipOrderResponse {
  string tracking_id = 1;
}

